[package]
name = "ring-file"
version = "0.2.0"
edition = "2018"
license = "MIT"
authors = ["plan <frostyplanet@gmail.com>"]
categories = ["development-tools::debugging", "data-structures"]
documentation = "https://docs.rs/ring-file"
keywords = ["log", "file", "data"]
description="""A debugging tool with ring buffer like file struture, for high-performance code development"""

[dependencies]
io-buffer = "^1.0.3"
thread_local = "1"
parking_lot = "0"
libc = "0"
